--- a/en_projects.html
+++ b/en_projects.html
@@ -625,33 +625,35 @@
       </div>
     </section>
     <section class="section">
-      <div class="section-title">Projects at HSE</div>
+      <div class="section-title">Projects at Lambda HSE</div>
       <!-- Project 1 -->
       <div class="project-block">
         <div class="project-block-img">
           <img src="AI_in_physics.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Physics of Materials and Molecules at HSE</div>
+          <div class="project-block-title">Physics of Materials and Molecules</div>
           <div class="project-block-desc" style="text-align:justify;">
-            Large language models (LLMs) have shown impressive abilities in a variety of tasks, but there are still challenges in their use for natural sciences [1].
+            Studying the properties of matter and generating matter with given properties is the basis for many areas of industry. Neural networks have recently begun to be actively used in the field of materials science and this is one of the hottest scientific areas [1].
+            Large language models (LLMs) have shown impressive abilities in a variety of tasks, but there are still challenges in their use for natural sciences [2].
             In our project, we aim to adapt and explore the behavior of LLMs for generating atom-level structures for solving physical and chemical problems.
-            A major challenge in generative modeling is the limited availability of (especially experimental) data [2]. In addition, the choice of data representation for materials is not obvious and depends on the approach used.
+            A major challenge in generative modeling is the limited availability of (especially experimental) data [3]. In addition, the choice of data representation for materials is not obvious and depends on the approach used.
             With some representations, a portion of the object's information is lost. We adapt and extend textual representation methods to low-dimensional crystal structures, and for molecular structures, we propose a multimodal representation to improve generation quality.
             The ultimate goal is to develop algorithms for determining the composition and geometry of crystals and molecules, accounting for their physically important macroscopic properties.
-            Research is ongoing [3-5], and many generation methods have been proposed, but most have important limitations.
+            Research is ongoing [4-6], and many generation methods have been proposed, but most have important limitations.
             For crystals, particular attention should be paid to optical properties and low-dimensional (2D) materials, which are still understudied and whose number grows every year.
-            2D materials [6] are highly promising for applications due to their unique properties and size, and they are relatively easy to construct experimentally.
+            2D materials [7] are highly promising for applications due to their unique properties and size, and they are relatively easy to construct experimentally.
           </div>
           <div class="project-block-refs" style="text-align:justify;">
             <b>References:</b>
             <ul>
-              <li>[1]. Antunes, L.M., Butler, K.T. and Grau-Crespo, R., Crystal structure generation with autoregressive large language modeling. <i>Nature Communications</i>, 2024.</li>
-              <li>[2]. Al-Maeeni, A., Lazarev, M., Kazeev, N., Novoselov, K.S. and Ustyuzhanin, A., Review on automated 2D material design. <i>2D Materials</i>, 2024.</li>
-              <li>[3]. Luo, X., Wang, Z., Gao, P., Lv, J., Wang, Y., Chen, C. and Ma, Y., Deep learning generative model for crystal structure prediction. <i>npj Computational Materials</i>, 2024.</li>
-              <li>[4]. Jablonka, K.M., Schwaller, P., Ortega-Guerrero, A. and Smit, B., Leveraging large language models for predictive chemistry. <i>Nature Machine Intelligence</i>, 2024.</li>
-              <li>[5]. Merchant, A., Batzner, S., Schoenholz, S.S., Aykol, M., Cheon, G. and Cubuk, E.D., Scaling deep learning for materials discovery. <i>Nature</i>, 2023.</li>
-              <li>[6]. Glavin, N.R., Rao, R., Varshney, V., Bianco, E., Apte, A., Roy, A., Ringe, E. and Ajayan, P.M., Emerging applications of elemental 2D materials. <i>Advanced Materials</i>, 2020.</li>
+              <li>[1].Zhang, X., Wang, L., Helwig, J., Luo, Y., Fu, C., Xie, Y., Liu, M., Lin, Y., Xu, Z., Yan, K. and Adams, K., Artificial intelligence for science in quantum, atomistic, and continuum systems. <i>arXiv</i>, 2024.</li>
+              <li>[2]. Antunes, L.M., Butler, K.T. and Grau-Crespo, R., Crystal structure generation with autoregressive large language modeling. <i>Nature Communications</i>, 2024.</li>
+              <li>[3]. Al-Maeeni, A., Lazarev, M., Kazeev, N., Novoselov, K.S. and Ustyuzhanin, A., Review on automated 2D material design. <i>2D Materials</i>, 2024.</li>
+              <li>[4]. Luo, X., Wang, Z., Gao, P., Lv, J., Wang, Y., Chen, C. and Ma, Y., Deep learning generative model for crystal structure prediction. <i>npj Computational Materials</i>, 2024.</li>
+              <li>[5]. Jablonka, K.M., Schwaller, P., Ortega-Guerrero, A. and Smit, B., Leveraging large language models for predictive chemistry. <i>Nature Machine Intelligence</i>, 2024.</li>
+              <li>[6]. Merchant, A., Batzner, S., Schoenholz, S.S., Aykol, M., Cheon, G. and Cubuk, E.D., Scaling deep learning for materials discovery. <i>Nature</i>, 2023.</li>
+              <li>[7]. Glavin, N.R., Rao, R., Varshney, V., Bianco, E., Apte, A., Roy, A., Ringe, E. and Ajayan, P.M., Emerging applications of elemental 2D materials. <i>Advanced Materials</i>, 2020.</li>
             </ul>
           </div>
         </div>
@@ -662,7 +664,7 @@
           <img src="Digital_twin.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Applied ML at HSE</div>
+          <div class="project-block-title">Applied DL for medicine</div>
           <div class="project-block-desc" style="text-align:justify;">
             Coronary artery disease (CAD) remains a leading cause of death and morbidity worldwide, including in Russia, where it accounts for over half of all cardiovascular diseases.
             Despite progress in medicine, effective CAD diagnosis and treatment are still a top healthcare priority.
