--- a/projects.html
+++ b/projects.html
@@ -631,32 +631,34 @@
       </div>
     </section>
     <section class="section">
-      <div class="section-title">Проекты в ВШЭ</div>
+      <div class="section-title">Проекты в Lambda ВШЭ</div>
       <!-- Проект 1 -->
       <div class="project-block">
         <div class="project-block-img">
           <img src="AI_in_physics.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Физика материалов и молекул в ВШЭ</div>
+          <div class="project-block-title">Физика материалов и молекул</div>
           <div class="project-block-desc" style="text-align:justify;">
-            Большие языковые модели показали впечатляющие способности в решении большого числа задач, но всё ещё есть проблемы в их использовании в естественно-научном направлении. [1]
+            Изучение свойств материи и генерация материи с заданными свойствами это база для многих областей индустрии. Нейронные сети сравнительно недавно начали активно применяться в области материаловедения и это одно из самых горячих научных направлений [1].
+            Большие языковые модели показали впечатляющие способности в решении большого числа задач, но всё ещё есть проблемы в их использовании в естественно-научном направлении. [2]
             В нашем проекте мы планируем - адаптировать и изучить поведение LLMs, для задач генерации структур на атомарном уровне для решения физико-химических задач. 
-            Одна из больших проблем в области генеративных моделей - это ограниченное количество данных, особенно экспериментальных [2]. Помимо проблемы недостатка данных, выбор метода представления материалов не однозначен и зависит от выбанного подхода. 
+            Одна из больших проблем в области генеративных моделей - это ограниченное количество данных, особенно экспериментальных [3]. Помимо проблемы недостатка данных, выбор метода представления материалов не однозначен и зависит от выбанного подхода. 
             Выбирая представление в одном виде,  теряется часть информации об объекте, мы адаптируем и распространим методы текстового представления на низкоразмерные кристаллические структуры, а для молекулярных структур мы предлагаем использовать мультимодальный подход представления атомарных структур для улучшения качества генерации. 
-            Конечной целью нашей работы является разработка алгоритмов определения состава и геометрического строения кристаллов и молекул с учетом их практически важных макроскопических физических свойств. Работы в этом направлении ведутся [3-5] и было предложено много различных методов генерации, однако у многих есть существенные ограничения.
+            Конечной целью нашей работы является разработка алгоритмов определения состава и геометрического строения кристаллов и молекул с учетом их практически важных макроскопических физических свойств. Работы в этом направлении ведутся [4-6] и было предложено много различных методов генерации, однако у многих есть существенные ограничения.
             В случае кристаллов стоит уделить особое внимание оптическим свойствам и низкоразмерным структурам, таким как двумерные материалы. Они в данный момент не полностью изучены, а их число с каждым годом только растет.  
-            Двумерные материалы [6] являются очень перспективными с точки зрения приложений, из-за своих уникальных свойств и размеров, кроме этого низкоразмерные материалы на основе двумерных относительно легко сконструировать экспериментально.
+            Двумерные материалы [7] являются очень перспективными с точки зрения приложений, из-за своих уникальных свойств и размеров, кроме этого низкоразмерные материалы на основе двумерных относительно легко сконструировать экспериментально.
           </div>
           <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
-              <li>[1].Antunes, L.M., Butler, K.T. and Grau-Crespo, R., Crystal structure generation with autoregressive large language modeling.  <i>Nature Communications</i>, 2024.</li>
-              <li>[2].Al-Maeeni, A., Lazarev, M., Kazeev, N., Novoselov, K.S. and Ustyuzhanin, A., Review on automated 2D material design. <i>2D Materials</i>, 2024.</li>
-              <li>[3].Luo, X., Wang, Z., Gao, P., Lv, J., Wang, Y., Chen, C. and Ma, Y., Deep learning generative model for crystal structure prediction.<i>npj Computational Materials</i>, 2024.</li>
-              <li>[4].Jablonka, K.M., Schwaller, P., Ortega-Guerrero, A. and Smit, B., Leveraging large language models for predictive chemistry.<i>Nature Machine Intelligence</i>, 2024.</li>
-              <li>[5].Merchant, A., Batzner, S., Schoenholz, S.S., Aykol, M., Cheon, G. and Cubuk, E.D., Scaling deep learning for materials discovery. <i>Nature</i>, 2023.</li>
-              <li>[6].Glavin, N.R., Rao, R., Varshney, V., Bianco, E., Apte, A., Roy, A., Ringe, E. and Ajayan, P.M., 2020. Emerging applications of elemental 2D materials.  <i>Advanced Materials</i>, 2020.</li>
+              <li>[1].Zhang, X., Wang, L., Helwig, J., Luo, Y., Fu, C., Xie, Y., Liu, M., Lin, Y., Xu, Z., Yan, K. and Adams, K., Artificial intelligence for science in quantum, atomistic, and continuum systems. <i>arXiv</i>, 2024.</li>
+              <li>[2].Antunes, L.M., Butler, K.T. and Grau-Crespo, R., Crystal structure generation with autoregressive large language modeling.  <i>Nature Communications</i>, 2024.</li>
+              <li>[3].Al-Maeeni, A., Lazarev, M., Kazeev, N., Novoselov, K.S. and Ustyuzhanin, A., Review on automated 2D material design. <i>2D Materials</i>, 2024.</li>
+              <li>[4].Luo, X., Wang, Z., Gao, P., Lv, J., Wang, Y., Chen, C. and Ma, Y., Deep learning generative model for crystal structure prediction.<i>npj Computational Materials</i>, 2024.</li>
+              <li>[5].Jablonka, K.M., Schwaller, P., Ortega-Guerrero, A. and Smit, B., Leveraging large language models for predictive chemistry.<i>Nature Machine Intelligence</i>, 2024.</li>
+              <li>[6].Merchant, A., Batzner, S., Schoenholz, S.S., Aykol, M., Cheon, G. and Cubuk, E.D., Scaling deep learning for materials discovery. <i>Nature</i>, 2023.</li>
+              <li>[7].Glavin, N.R., Rao, R., Varshney, V., Bianco, E., Apte, A., Roy, A., Ringe, E. and Ajayan, P.M., 2020. Emerging applications of elemental 2D materials.  <i>Advanced Materials</i>, 2020.</li>
 
             </ul>
           </div>
@@ -668,7 +670,7 @@
           <img src="Digital_twin.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Прикладной ML в в ВШЭ</div>
+          <div class="project-block-title">Прикладной DL для медицины</div>
           <div class="project-block-desc" style="text-align:justify;">
             Коронарная болезнь сердца (КБС) остаётся одной из ведущих причин смертности и заболеваемости во всём мире, в том числе в России, где на неё приходится более половины всех случаев сердечно-сосудистых заболеваний. 
             Несмотря на успехи медицины, эффективная диагностика и лечение КБС остаются приоритетной задачей для здравоохранения. 
