--- a/en_projects.html
+++ b/en_projects.html
@@ -632,7 +632,7 @@
           <img src="AI_in_physics.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Physics of Materials and Molecules</div>
+          <div class="project-block-title">Applied DL for Physics of Materials and Molecules</div>
           <div class="project-block-desc" style="text-align:justify;">
             Studying the properties of matter and generating matter with given properties is the basis for many areas of industry. Neural networks have recently begun to be actively used in the field of materials science and this is one of the hottest scientific areas [1].
             Large language models (LLMs) have shown impressive abilities in a variety of tasks, but there are still challenges in their use for natural sciences [2].
