--- a/projects.html
+++ b/projects.html
@@ -638,7 +638,7 @@
           <img src="AI_in_physics.png" alt="Data Science HSE">
         </div>
         <div class="project-block-content">
-          <div class="project-block-title">Физика материалов и молекул</div>
+          <div class="project-block-title">Прикладной DL для физики материалов и молекул</div>
           <div class="project-block-desc" style="text-align:justify;">
             Изучение свойств материи и генерация материи с заданными свойствами это база для многих областей индустрии. Нейронные сети сравнительно недавно начали активно применяться в области материаловедения и это одно из самых горячих научных направлений [1].
             Большие языковые модели показали впечатляющие способности в решении большого числа задач, но всё ещё есть проблемы в их использовании в естественно-научном направлении. [2]
