--- a/index.html
+++ b/index.html
@@ -579,7 +579,21 @@
         padding: 0 10px;
       }
     }
-
+    @media (max-width: 600px) {
+      .footer-logo img {
+        height: 60px !important;
+        max-width: 90px !important;
+        margin-bottom: 4px;
+      }
+      .footer-inner {
+        gap: 8px;
+        min-height: unset;
+        padding-bottom: 10px;
+      }
+      .footer-info {
+        font-size: 0.97em;
+      }
+    }
     /* Остальные адаптивные стили уже в коде */
   </style>
 </head>
