--- a/career.html
+++ b/career.html
@@ -706,7 +706,7 @@
     </section>
     
     <div style="text-align:center; margin:36px 0 44px 0;">
-      <img src="2dmat.png" alt="Название изображения" style="max-width: 150vw; width: 580px; height: auto;">
+      <img src="2dmat.png" alt="Название изображения" style="width:100%; height:auto; display:block; margin:0 auto; max-width:580px;">
     </div>
     
   </main>
